--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,29 @@
+<div class="example-container">
+  <mat-toolbar color="primary" class="example-toolbar">
+    <button mat-icon-button (click)="snav.toggle()">
+      <mat-icon>menu</mat-icon>
+    </button>
 
-  <div class="example-container">
-    <mat-toolbar color="primary" class="example-toolbar">
-      <button mat-icon-button (click)="snav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      
-      <h1 class="example-app-name">ValueMomentum (POC)</h1>
-      <span class="example-spacer"></span>
-      <img src="../assets/logo.png" alt="logo"  />
-    </mat-toolbar>
+    <h1 class="example-app-name">{{ title.getTitle() }}</h1>
+    <span class="example-spacer"></span>
+    <img src="../assets/logo.png" alt="logo" />
+  </mat-toolbar>
 
-    <mat-sidenav-container class="example-sidenav-container">
-      <mat-sidenav #snav mode='side' opened class="example-sidenav">
-        <mat-nav-list>
-          <a mat-list-item routerLink=".">Dashboard</a>
-          <a mat-list-item routerLink=".">Customers</a>
-        </mat-nav-list>
-        
-      </mat-sidenav>
+  <mat-sidenav-container class="example-sidenav-container">
+    <mat-sidenav #snav mode='side' opened class="example-sidenav">
+      <mat-nav-list>
+        <!-- <a mat-list-item routerLink=".">Dashboard</a>
+          <a mat-list-item routerLink=".">Customers</a> -->
+        <a *ngFor="let navItem of navItems" mat-list-item routerLinkActive="active-link" (click)="start.close()"
+          [routerLink]="[navItem.route]">
+          {{ navItem.name }}
+        </a>
+      </mat-nav-list>
 
-      <mat-sidenav-content>
-        <p >hjhj</p>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  </div>
+    </mat-sidenav>
+
+    <mat-sidenav-content class="sidebar_content">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>
