--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,7 +39,7 @@
 
 .sidebar_content {
   border-left: 1px solid rgba(0,0,0,0.42);
-  padding-left: 10px;  
+  /* padding-left: 10px;   */
 }
 
 .nav-text {
