--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <mat-nav-list>
         <!-- <a mat-list-item routerLink=".">Dashboard</a>
           <a mat-list-item routerLink=".">Customers</a> -->
-        <a class="nav-item" *ngFor="let navItem of navItems" mat-list-item routerLinkActive="active-link" (click)="start.close()"
+        <a class="nav-item" *ngFor="let navItem of navItems" mat-list-item routerLinkActive="active-link"
           [routerLink]="[navItem.route]">
           <mat-icon>{{ navItem.icon }}</mat-icon><span class="nav-text">{{ navItem.name }}</span> 
         </a>
