--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,40 +1,158 @@
 <h4>Customer Validation</h4>
+<!-- 
+<app-validate-user (validated)="onValidated(isvalid)"></app-validate-user>
 
-<app-validate-user></app-validate-user>
+<app-customer-card  *ngIf= "isvalid"></app-customer-card>
+<app-customer-card *ngIf= "isvalid"></app-customer-card> -->
 
-<app-customer-card></app-customer-card>
-<app-customer-card></app-customer-card>
+<div class="validation-card">
+  <mat-card class="example-card">
+    <mat-card-header color="primary" style="justify-content: center">
+      <mat-card-title color="primary">
+        <h2>Validate the Customer</h2>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
 
-<!-- <div class="customer_section">
-  <mat-card class="customer_section_card">
-    <div class="summary_title">
-      BR.Net
-    </div>
-    <div class="vertical_devider"></div>
-    <div class="card_section_container">
-      <div class="card_section_title">Customer Details</div>
-      <div>Mani Kumar K V</div>
-      <div><a href="tel:9000123456">9000123456</a></div>
-      <div><a href="mailto: manikumarkv@gmail.com">manikumarkv@gmail.com</a></div>
-    </div>
-    <div class="vertical_devider"></div>
-    <div class="card_section_container">
-      <div class="card_section_title">Status</div>
-      <div>
-        <mat-chip-list>
-          <mat-chip color="primary" selected>Completed</mat-chip>
-        </mat-chip-list>
+      <form class="example-form">
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>LAN</mat-label>
+          <input name="lan" [(ngModel)]="user.lan" matInput placeholder="LAN" value="">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>PAN</mat-label>
+          <input name="pan" [(ngModel)]="user.pan" matInput placeholder="PAN" value="">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>DOB</mat-label>
+          <input matInput [matDatepicker]="picker" placeholder="DOB">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>Saction ID</mat-label>
+          <input matInput placeholder="Saction ID" value="">
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions style=" display: flex; justify-content: space-around">
+      <button (click)="onValidate(user)" mat-raised-button color="primary">Validate</button>
+      <button mat-stroked-button>Reset</button>
+    </mat-card-actions>
+    <mat-card-footer *ngIf="!isValidCustomer && isSubmitted">
+      invalid data
+    </mat-card-footer>
+  </mat-card>
+</div>
+
+
+
+<mat-accordion *ngIf="isValidCustomer">
+  <mat-expansion-panel color="primary">
+    <mat-expansion-panel-header collapsedHeight="100px" expandedHeight="100px">
+      <mat-panel-title>
+        CRMnext
+      </mat-panel-title>
+      <mat-panel-description>
+          {{customer.crmNext.customerName}} ({{customer.crmNext.mobile}})
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div class="customer_section_card">
+      <div class="card_section_container">
+        <div class="card_section_title">Customer Details</div>
+        <div>{{customer.crmNext.customerName}}</div>
+        <div><a href="tel:{{customer.crmNext.mobile}}">{{customer.crmNext.mobile}}</a></div>
+        <div><a href="mailto: {{customer.crmNext.email}}">{{customer.crmNext.email}}</a></div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Status</div>
+        <div>
+          <mat-chip-list>
+            <mat-chip color="primary" selected>{{customer.crmNext.status}}</mat-chip>
+          </mat-chip-list>
+        </div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Created On</div>
+        <div>{{customer.crmNext. createdOn}}</div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Is Active</div>
+        <div>{{customer.crmNext.isActive}}</div>
       </div>
     </div>
-    <div class="vertical_devider"></div>
-    <div class="card_section_container">
-      <div class="card_section_title">Created On</div>
-      <div>Dec 21st 2018</div>
+    <div>
+      <mat-tab-group dynamicHeight>
+        <mat-tab label="Summary">
+          <app-summary-tab [summary]="customer.crmNext.summaryPage"></app-summary-tab>
+        </mat-tab>
+        <mat-tab label="CRMNext"> Content 2 </mat-tab>
+        <mat-tab label="Finnone"> Content 3 </mat-tab>
+        <mat-tab label="Qlikview"> Content 1 </mat-tab>
+        <mat-tab label="IC4"> Content 2 </mat-tab>
+        <mat-tab label="Omnidocs"> Content 3 </mat-tab>
+        <mat-tab label="sharedfolders"> Content 3 </mat-tab>
+      </mat-tab-group>
     </div>
-    <div class="vertical_devider"></div>
-    <div class="card_section_container">
-      <div class="card_section_title">Is Active</div>
-      <div>Yes</div>
+
+  </mat-expansion-panel>
+</mat-accordion>
+
+
+<mat-accordion *ngIf="isValidCustomer">
+  <mat-expansion-panel color="primary">
+    <mat-expansion-panel-header collapsedHeight="100px" expandedHeight="100px">
+      <mat-panel-title>
+        BR.Net
+      </mat-panel-title>
+      <mat-panel-description>
+        {{customer.brNet.customerName}} ({{customer.brNet.mobile}})
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div class="customer_section_card">
+      <div class="card_section_container">
+        <div class="card_section_title">Customer Details</div>
+        <div>{{customer.brNet.customerName}}</div>
+        <div><a href="tel:9000123456">9000123456</a></div>
+        <div><a href="mailto: {{customer.brNet.email}}">{{customer.brNet.email}}</a></div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Status</div>
+        <div>
+          <mat-chip-list>
+            <mat-chip color="primary" selected>{{customer.brNet.status}}</mat-chip>
+          </mat-chip-list>
+        </div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Created On</div>
+        <div>{{customer.brNet.createdOn}}</div>
+      </div>
+      <div class="vertical_devider"></div>
+      <div class="card_section_container">
+        <div class="card_section_title">Is Active</div>
+        <div>{{customer.brNet.isActive}}</div>
+      </div>
     </div>
-  </mat-card>
-</div> -->
+    <div>
+      <mat-tab-group dynamicHeight>
+        <mat-tab label="Summary">
+          <app-summary-tab [summary]="customer.brNet.summaryPage"></app-summary-tab>
+        </mat-tab>
+        <mat-tab label="CRMNext"> Content 2 </mat-tab>
+        <mat-tab label="Finnone"> Content 3 </mat-tab>
+        <mat-tab label="Qlikview"> Content 1 </mat-tab>
+        <mat-tab label="IC4"> Content 2 </mat-tab>
+        <mat-tab label="Omnidocs"> Content 3 </mat-tab>
+        <mat-tab label="sharedfolders"> Content 3 </mat-tab>
+      </mat-tab-group>
+    </div>
+
+  </mat-expansion-panel>
+</mat-accordion>
