--- a/src/app/validate-user/validate-user.component.html
+++ b/src/app/validate-user/validate-user.component.html
@@ -1,46 +1,40 @@
 <div class="validation-card">
-    <mat-card class="example-card">
-      <mat-card-header color="primary" style="justify-content: center">
-        <!-- <div mat-card-avatar class="example-header-image"></div> -->
-        <mat-card-title color="primary">
-          <h2>Validate the Customer</h2>
-        </mat-card-title>
-        <!-- <mat-card-subtitle>Dog Breed</mat-card-subtitle> -->
-      </mat-card-header>
-      <mat-card-content>
-  
-        <form class="example-form">
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>LAN</mat-label>
-            <input matInput placeholder="LAN" value="">
-          </mat-form-field>
-  
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>PAN</mat-label>
-            <input matInput placeholder="PAN" value="">
-          </mat-form-field>
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>DOB</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="DOB">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-          <!-- <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>DOB</mat-label>
-            <input matInput placeholder="DOB" value="">
-          </mat-form-field> -->
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Saction ID</mat-label>
-            <input matInput placeholder="Saction ID" value="">
-          </mat-form-field>
-        </form>
-      </mat-card-content>
-      <mat-card-actions style=" display: flex; justify-content: space-around">
-        <button mat-raised-button color="primary">Validate</button>
-        <button mat-stroked-button>Reset</button>
-      </mat-card-actions>
-      <!-- <mat-card-footer>
-        validation message here
-      </mat-card-footer> -->
-    </mat-card>
-  </div>
+  <mat-card class="example-card">
+    <mat-card-header color="primary" style="justify-content: center">
+      <mat-card-title color="primary">
+        <h2>Validate the Customer</h2>
+      </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+
+      <form class="example-form">
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>LAN</mat-label>
+          <input name="lan" [(ngModel)]="user.lan" matInput placeholder="LAN" value="">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>PAN</mat-label>
+          <input name="pan" [(ngModel)]="user.pan" matInput placeholder="PAN" value="">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>DOB</mat-label>
+          <input matInput [matDatepicker]="picker" placeholder="DOB">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="example-full-width">
+          <mat-label>Sanction ID</mat-label>
+          <input matInput placeholder="Sanction ID" value="">
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions style=" display: flex; justify-content: space-around">
+      <button (click)="onValidate(user)" mat-raised-button color="primary">Validate</button>
+      <button mat-stroked-button>Reset</button>
+    </mat-card-actions>
+    <mat-card-footer *ngIf="!isValidCustomer && isSubmitted">
+      invalid data
+    </mat-card-footer>
+  </mat-card>
+</div>
