added emi claculator

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 
     <h1 class="example-app-name">{{ title.getTitle() }}</h1>
     <span class="example-spacer"></span>
-    <img src="../assets/logo.png" alt="logo" />
+    <h1>Fullerton India</h1>
   </mat-toolbar>
 
   <mat-sidenav-container class="example-sidenav-container">
