--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,3 +1,57 @@
-<p>
-  calculator works!
-</p>
+<h2 style="color: rgba(0,0,0,.54); margin-left: 20px">EMI Calculator</h2>
+
+<div style="margin: 20px">
+  <mat-card>
+
+    <mat-card-content style="display: flex">
+      <div style="width: 50%">
+        <div>
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Loan Amount</mat-label>
+            <input matInput placeholder="Loan Amount" [(ngModel)]="loanAmount">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-slider color="primary" style="width: 80%" [max]="10000000" [min]="10000" [step]="100000" [thumbLabel]="false"
+            [(ngModel)]="loanAmount"></mat-slider>
+        </div>
+        <div>
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Rate Of Intrest</mat-label>
+            <input matInput placeholder="Rate Of Intrest" [(ngModel)]="roi">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-slider color="primary" style="width: 80%" [max]="15" [min]="8" [step]="0.1" [thumbLabel]="false" [(ngModel)]="roi"></mat-slider>
+        </div>
+
+        <div>
+          <mat-form-field appearance="outline" class="example-full-width">
+            <mat-label>Loan Term (In Years)</mat-label>
+            <input matInput placeholder="Loan Term (In Years)" [(ngModel)]="term">
+          </mat-form-field>
+        </div>
+        <div>
+          <mat-slider color="primary" style="width: 80%" [max]="30" [min]="1" [step]="1" [thumbLabel]="false" [(ngModel)]="term"></mat-slider>
+        </div>
+      </div>
+      <div>
+        <div>
+          <h2 style="color: rgba(0,0,0,.64)">Principal Amount</h2> ₹{{loanAmount}}
+        </div>
+        <div>
+            <h2 style="color: rgba(0,0,0,.64)">Total Intrest</h2>₹{{(getPayment(loanAmount, roi, term)*12*term) - (loanAmount)}}
+          </div>
+        <div>
+          <h2 style="color: rgba(0,0,0,.64)">Total Payment (Principal + Interest)</h2>₹{{getPayment(loanAmount, roi, term)*12*term}}
+        </div>
+        
+        <div>
+          <h2 style="color: rgba(0,0,0,.64)">Monthly EMI</h2> ₹{{getPayment(loanAmount, roi, term)}}
+        </div>
+
+      </div>
+
+    </mat-card-content>
+  </mat-card>
+</div>
