--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,4 +1,4 @@
-<h4>Customer Validation</h4>
+<h4 style="color: rgba(0,0,0,.54); margin-left: 20px">Customer Validation</h4>
 <!-- 
 <app-validate-user (validated)="onValidated(isvalid)"></app-validate-user>
 
@@ -9,7 +9,7 @@
   <mat-card class="example-card">
     <mat-card-header color="primary" style="justify-content: center">
       <mat-card-title color="primary">
-        <h2>Validate the Customer</h2>
+        <h2 style="color: rgba(0,0,0,.54)">Validate Customer</h2>
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -49,7 +49,7 @@
 
 
 <mat-accordion *ngIf="isValidCustomer">
-  <mat-expansion-panel color="primary">
+  <mat-expansion-panel style="border: 1px solid rgba(0,0,0,.34); margin: 10px 20px" color="primary">
     <mat-expansion-panel-header collapsedHeight="100px" expandedHeight="100px">
       <mat-panel-title>
         CRMnext
@@ -104,7 +104,7 @@
 
 
 <mat-accordion *ngIf="isValidCustomer">
-  <mat-expansion-panel color="primary">
+  <mat-expansion-panel style="border: 1px solid rgba(0,0,0,.34); margin: 10px 20px">
     <mat-expansion-panel-header collapsedHeight="100px" expandedHeight="100px">
       <mat-panel-title>
         BR.Net
