--- a/src/app/summary-tab/summary-tab.component.html
+++ b/src/app/summary-tab/summary-tab.component.html
@@ -50,6 +50,41 @@
         </mat-form-field>
       </div>
       <div style="width: 50%; margin: 0 5px">
+          <div>
+              <h2>Last Transactions</h2>
+            </div>
+            <table style="margin-bottom: 10px" class="details-table" mat-table [dataSource]="transactions">
+          
+          
+              <!-- srNo Column -->
+              <ng-container matColumnDef="srNo">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element"> {{element.srNo}} </td>
+              </ng-container>
+          
+              <!-- Name Column -->
+              <ng-container matColumnDef="transactionDate">
+                <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.transactionDate}} </td>
+              </ng-container>
+          
+              <!-- Weight Column -->
+              <ng-container matColumnDef="emiDueDate">
+                <th mat-header-cell *matHeaderCellDef> EMI Due Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.emiDueDate}} </td>
+              </ng-container>
+          
+              <!-- Symbol Column -->
+              <ng-container matColumnDef="status">
+                <th mat-header-cell *matHeaderCellDef> Status </th>
+                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+              </ng-container>
+          
+              <tr mat-header-row *matHeaderRowDef="trasactionsColums; sticky: true"></tr>
+              <tr mat-row *matRowDef="let row; columns: trasactionsColums;"></tr>
+            </table>
+
+
         <mat-form-field appearance="outline" class="example-full-width">
           <mat-label>Type of ROI</mat-label>
           <input matInput placeholder="Type of ROI" value="">
@@ -86,39 +121,7 @@
 
 
   </div>
-  <div>
-    <h2>Last Transactions</h2>
-  </div>
-  <table class="details-table" mat-table [dataSource]="transactions">
 
-
-    <!-- srNo Column -->
-    <ng-container matColumnDef="srNo">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.srNo}} </td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="transactionDate">
-      <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.transactionDate}} </td>
-    </ng-container>
-
-    <!-- Weight Column -->
-    <ng-container matColumnDef="emiDueDate">
-      <th mat-header-cell *matHeaderCellDef> EMI Due Date </th>
-      <td mat-cell *matCellDef="let element"> {{element.emiDueDate}} </td>
-    </ng-container>
-
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="trasactionsColums; sticky: true"></tr>
-    <tr mat-row *matRowDef="let row; columns: trasactionsColums;"></tr>
-  </table>
 
 
   <div>
