--- a/src/app/validate-user/validate-user.component.html
+++ b/src/app/validate-user/validate-user.component.html
@@ -1,8 +1,8 @@
-<div class="validation-card">
+<!-- <div class="validation-card">
   <mat-card class="example-card">
     <mat-card-header color="primary" style="justify-content: center">
-      <mat-card-title color="primary">
-        <h2>Validate the Customer</h2>
+      <mat-card-title style="color: rgba(0,0,0,.54)" [style.color]="rgba(0,0,0,.54)" color="primary">
+        <label style="color: rgba(0,0,0,.54)">Validate the Customer</label>
       </mat-card-title>
     </mat-card-header>
     <mat-card-content>
@@ -37,4 +37,4 @@
       invalid data
     </mat-card-footer>
   </mat-card>
-</div>
+</div> -->
