--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,2 @@
-<h2 style="color: rgba(0,0,0,.54); margin-left: 20px"></h2>
+<h4 style="color: rgba(0,0,0,.54); margin-left: 20px">Administration Panel</h4>
+<div></div>
